Adicionando cards nas noticias

--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
             </div>
             <div class="noticia2">
                 <article>
+                    <div class="cardnoticia">
                         <h3>Raissa leal</h3>
                         <img src="./img/raissa-leal.avif" alt="Raissa">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet maxime numquam eum odio eius totam enim, nulla reiciendis nihil quaerat adipisci ducimus quam necessitatibus minus vitae delectus libero recusandae consequatur!</p>
+                    </div>
                 </article>
                 <article>
+                    <div class="cardnoticia">
                         <h3>Trump da entrevista e diz que</h3>
                         <img src="./img/trump.avif" alt="Trump">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id voluptates tempora sunt earum voluptatem neque nihil rem ratione, saepe veniam eaque vel quis odio odit quod beatae soluta veritatis doloremque.</p>
+                    </div>
                 </article>
             </div>
         </div>
