Corrigindo todas as sessões e Adicinando uma sessão com 4 noticias

--- a/index.html
+++ b/index.html
@@ -21,24 +21,30 @@
     </header>
     <main>
         <div class="articles">
-            <div class="noticia1">
+            <div class="noticias">
                 <article>
-                    <h3>Dolar fecha o dia!</h3>
-                    <img src="./img/dolar.webp" alt="Dolar">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi exercitationem, incidunt odio corrupti voluptates distinctio ipsum doloremque harum velit repellat, maxime laboriosam dolores? Reiciendis incidunt porro similique eveniet, corporis unde?</p>
+                    <div class="cardnoticia">
+                        <h3>Dolar fecha o dia!</h3>
+                        <img src="./img/dolar.webp" alt="Dolar">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi exercitationem, incidunt odio corrupti voluptates distinctio ipsum doloremque harum velit repellat, maxime laboriosam dolores? Reiciendis incidunt porro similique eveniet, corporis unde?</p>
+                    </div>
                 </article>
                 <article>
-                    <h3>Lula da entrevista</h3>
-                    <img src="./img/lula.webp" alt="Lula">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet error hic repellat beatae similique atque dicta ex cum magnam reiciendis, corrupti nemo consequuntur quasi blanditiis labore nesciunt architecto facere provident?</p>
+                    <div class="cardnoticia">
+                        <h3>Lula da entrevista</h3>
+                        <img src="./img/lula.webp" alt="Lula">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet error hic repellat beatae similique atque dicta ex cum magnam reiciendis, corrupti nemo consequuntur quasi blanditiis labore nesciunt architecto facere provident?</p>
+                    </div>
                 </article>
                 <article>
-                    <h3>Reforma Tributária</h3>
-                    <img src="./img/reforma-tributaria_4b5280d5-525x350.jpg.webp" alt="Reforma Tributária">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus ipsa cupiditate deleniti similique excepturi libero ad illo perspiciatis dolorem, quibusdam nisi reprehenderit, nemo aperiam consequuntur velit vel esse recusandae sunt.</p>
+                    <div class="cardnoticia">
+                        <h3>Reforma Tributária</h3>
+                        <img src="./img/reforma-tributaria_4b5280d5-525x350.jpg.webp" alt="Reforma Tributária">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus ipsa cupiditate deleniti similique excepturi libero ad illo perspiciatis dolorem, quibusdam nisi reprehenderit, nemo aperiam consequuntur velit vel esse recusandae sunt.</p>
+                    </div>
                 </article>
             </div>
-            <div class="noticia2">
+            <div class="noticias">
                 <article>
                     <div class="cardnoticia">
                         <h3>Raissa leal</h3>
@@ -53,6 +59,38 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id voluptates tempora sunt earum voluptatem neque nihil rem ratione, saepe veniam eaque vel quis odio odit quod beatae soluta veritatis doloremque.</p>
                     </div>
                 </article>
+            </div>
+            <div class="noticias">
+                    <div class="noticias4">
+                    <article>
+                        <div class="cardnoticia">
+                            <h3>Raissa leal</h3>
+                            <img src="./img/raissa-leal.avif" alt="Raissa">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet maxime numquam eum odio eius totam enim, nulla reiciendis nihil quaerat adipisci ducimus quam necessitatibus minus vitae delectus libero recusandae consequatur!</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="cardnoticia">
+                            <h3>Trump da entrevista e diz que</h3>
+                            <img src="./img/trump.avif" alt="Trump">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id voluptates tempora sunt earum voluptatem neque nihil rem ratione, saepe veniam eaque vel quis odio odit quod beatae soluta veritatis doloremque.</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="cardnoticia">
+                            <h3>Trump da entrevista e diz que</h3>
+                            <img src="./img/trump.avif" alt="Trump">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id voluptates tempora sunt earum voluptatem neque nihil rem ratione, saepe veniam eaque vel quis odio odit quod beatae soluta veritatis doloremque.</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="cardnoticia">
+                            <h3>Trump da entrevista e diz que</h3>
+                            <img src="./img/trump.avif" alt="Trump">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id voluptates tempora sunt earum voluptatem neque nihil rem ratione, saepe veniam eaque vel quis odio odit quod beatae soluta veritatis doloremque.</p>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
     </main>
