--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
                     </article>
                 </div>
             </div>
+            <div class="noticias">
+                <div class="noticias5">
+                    <article>
+                            <div class="cardnoticia">
+                                <h3>Raissa leal</h3>
+                                <img src="./img/raissa-leal.avif" alt="Raissa">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet maxime numquam eum odio eius totam enim, nulla reiciendis nihil quaerat adipisci ducimus quam necessitatibus minus vitae delectus libero recusandae consequatur!</p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
